--- a/main.html
+++ b/main.html
@@ -10,7 +10,28 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table>
+        <thead>
+            <tr>
+                <th>Roll numbers</th>
+                <th>Names</th>
+            </tr>
+        </thead>
+        <tr>
+            <td>1111</td>
+            <td>Atul</td>
+        </tr>
+        <tr>
+            <td>1112</td>
+            <td>Arnav</td>
+        </tr>
+    </table>
+	<h2>List of medias</h2>
+    <ol>
+        <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
+        <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+    </ol>
 </body>
 
 </html>
