--- a/main.html
+++ b/main.html
@@ -25,12 +25,16 @@
             <td>1112</td>
             <td>Arnav</td>
         </tr>
+		<tr>
+            <td>1113</td>
+            <td>Anveksh</td>
+        </tr>
     </table>
 	<h2>List of medias</h2>
     <ol>
         <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
-        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
-        <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="vedio"></video></li>
+        <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="audio"></audio></li>
     </ol>
 </body>
 
