--- a/main.html
+++ b/main.html
@@ -33,7 +33,11 @@
 	<h2>List of medias</h2>
     <ol>
         <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
-        <li><video source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video></li>
+        <li>
+			<video controls width="300">
+	        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		    </video>
+		</li>
         <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="audio"></audio></li>
     </ol>
 </body>
